# FeatherEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Presets.json  UserPresets.json  XMAKE_MIGRATION.md  review.md  xmake.lua
.github/workflows/: ci.yml
.xmake/windows/x64/cache/: history  option  package  references  repository
core/: engine.cpp  engine.h  launch_settings.h  math.cpp  math.h  transform.cpp  transform.h  window.cpp
core/framework/: assert.h  assert.hpp  bytes.h  callable.cpp  callable.h  class_info.h  container_utils.h  containers.h  cow_vector.h  delegate.h  functions.h  high_level_array.cpp  high_level_array.h  macro_utils.h  path.h  reflected.cpp  reflected.h  reflection_macros.h  reflection_utils.h  shared_library.cpp  shared_library.h  singleton_helpers.h  spinlock.h  static_indexed_array.h  static_string.hpp  variant.cpp  variant.h  variant_array.cpp  variant_array.h  vector.h
core/input/: inputs.cpp  inputs.h  key_codes.h
core/main/: class_db.cpp  class_db.h  class_db.inl  engine.cpp  engine.h  engine_settings.cpp  engine_settings.h  feather_main.cpp  launch_settings.cpp  launch_settings.h  main.cpp  notification.h  project_settings.cpp  project_settings.h  simulation.cpp  simulation.h  window.cpp  window.h  world_sim.cpp  world_sim.h
core/math/: math_defs.cpp  math_defs.h  projection.cpp  projection.h  transform.cpp  transform.h
core/rendering/: mesh_data.cpp  mesh_data.h  render_capture.cpp  render_capture.h  render_data.h  render_scene.cpp  render_scene.h  renderer.cpp  renderer.h  rendering_server.cpp  rendering_server.h  triangle_mesh.cpp  triangle_mesh.h  viewport.h
core/resources/: extension.cpp  extension.h  extension_format_loader.cpp  extension_format_loader.h  material.cpp  material.h  material_format_loader.cpp  material_format_loader.h  mesh.cpp  mesh.h  mesh_format_loader.cpp  mesh_format_loader.h  resource.cpp  resource.h  resource_format_loader.cpp  resource_format_loader.h  resource_loader.cpp  resource_loader.h  rid.cpp  rid.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_format_loader.cpp  texture_format_loader.h
core/world/: core_ecs_module.cpp  core_ecs_module.h  core_world_feature.cpp  core_world_feature.h  ecs_defs.h  ecs_feature.cpp  ecs_feature.h  ecs_module.cpp  ecs_module.h  math_ecs_module.cpp  math_ecs_module.h  math_feature.cpp  math_feature.h  register_core_features.cpp  register_core_features.h  register_ecs_types.cpp  register_ecs_types.h  rendering_ecs_module.cpp  rendering_ecs_module.h  rendering_world_feature.cpp  rendering_world_feature.h  rendering_world_module.cpp  rendering_world_module.h  world.cpp  world.h  world_module.h
core/world/components/: light.h  scene.cpp  scene.h
modules/: CMakeLists.txt  modules.gen.cpp  modules.gen.h  xmake.lua
modules/vex_renderer/: CMakeLists.txt  register_module.cpp  register_module.h  vex_renderer.cpp  vex_renderer.h  xmake.lua
raw_resources/shaders/: depth_prepass.slang  example_cube.hlsl  example_cube.hlsl.h  example_cube.slang.h  feather.slang  pbr_forward.slang  pbr_forward.slang.h  placeholder_mat.slang  placeholder_mat.slang.h  shadow_depth.slang  shadow_depth.slang.h
raw_resources/shaders/common/: lighting_common.slang  lighting_common.slang.h  math_utils.slang  math_utils.slang.h  vex_common.slang  vex_common.slang.h
raw_resources/shaders/feather/: entities.slang  lighting_common.slang  math_utils.slang  vex_common.slang
raw_resources/shaders/pbr/: pbr_common.slang  pbr_common.slang.h  pbr_lighting.slang  pbr_lighting.slang.h  shadow_mapping.slang  shadow_mapping.slang.h
tools/: FeatherSDK.lua  generate_core_registers.py  generate_embedded_resources.py  generate_export.cmake  generate_modules.py  generate_register_types.py  options.cmake  toolchain-llvm.cmake
xmake/: helper.lua  options.lua
